# cds-slp

./: CMakeLists.txt
benchmarks/: build_indice.cpp
cmake/: ConfigGBench.cmake  ConfigGTest.cmake  ConfigSafeGuards.cmake  DownloadProject.cmake
include/slp/: RePairSLPIndex.h
include/slp/BinRel/: BinaryRelation.h  FullQuery.h  LabeledBinaryRelation.h  Point.h  Rule.h  RuleTrav.h
include/slp/RePair/: RePair.h  arrayG.h  dictionary.h  hash.h  heap.h  records.h
include/slp/Samplings/: CSD.h  CSD_HTFC.h  hutucker2.h  sampling.h
include/static/suffixtree/: factorization.h  factorization_var.h
include/utils/: BitString.h  libcdsTrees.h
src/slp/: RePairSLPIndex.cpp  SLPIndex.cpp
src/slp/BinRel/: BinaryRelation.cpp  LabeledBinaryRelation.cpp
src/slp/RePair/: RePair.cpp  arrayG.cpp  dictionary.cpp  hash.cpp  heap.cpp  records.cpp
src/slp/Samplings/: CSD.cpp  CSD_HTFC.cpp  VByte2.cpp  sampling.cpp
src/slp/Utils/: SuffixArray.cpp  deltacodes.cpp
src/static/bitsequence/: BitSequence375.cpp  TableOffsetRRR.cpp
src/static/coders/: huff.cpp
src/static/sequence/: SequenceGMRChunk.cpp
src/static/suffixtree/: factorization.cpp  factorization_var.cpp
test/: testLCP.cpp  testNPR.cpp  testSuffixTree.cpp  testTextIndex.cpp
